working with the first section.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Hi</h1>
+        <div class="first-section">
+            <div class="navbar">
+                <div class="navbar-left">
+                    <p id="Header-logo">Header Logo</p>
+                </div>
+                <div class="navbar-right">
+                    <ul style="list-style-type: none;">
+                     <li class="header-link">link one</li>
+                     <li class="header-link">link two</li>
+                     <li class="header-link">link three</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="content">
+                <div class="content-left">
+                    <h1>This website is awesome</h1>
+                    <p class="header-link">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button type="button" class="sign-up-first-section">Sign up</button>
+                </div>
+                <div class="content-right">
+                    <img src="https://previews.123rf.com/images/kues/kues1501/kues150101529/35048058-young-cool-black-man-celebrating-sign.jpg" alt="Man Celebrating" width="500">
+                </div>
+            </div>
+        </div>
     </body>
 </html>
