--- a/index.html
+++ b/index.html
@@ -58,5 +58,16 @@
             </h3>
             <p class="p-third"> -Thor, God of Thunder</p>
         </div>
+        <div class="last-div">
+            <div class="blue-container">
+                <div class="left">
+                    <h4>Call to action! It's time!</h4>
+                    <p class="last-p">Sign up for our product by clicking that button right over there</p>
+                </div>
+                <div class="right">
+                    <button type="button" class="btn-last-div">Sign up</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
