--- a/index.html
+++ b/index.html
@@ -69,5 +69,8 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            Copywrite The Odin Project 2024
+        </div>
     </body>
 </html>
