--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <button type="button" class="sign-up-first-section">Sign up</button>
                 </div>
                 <div class="content-right">
-                    <img src="https://previews.123rf.com/images/kues/kues1501/kues150101529/35048058-young-cool-black-man-celebrating-sign.jpg" alt="Man Celebrating" width="500">
+                    <img src="https://previews.123rf.com/images/kues/kues1501/kues150101529/35048058-young-cool-black-man-celebrating-sign.jpg" alt="Man Celebrating" width="200px">
                 </div>
             </div>
         </div>
